samples/_failures_safe/1761196325_3f9b63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a48200ba.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_a48200ba.c:132:37: error: expected ‘)’ at end of input
  132 |     if (!matrix_init(result, a->cols
      |                     ~               ^
      |                                     )
./samples/SAFE/__tmp_a48200ba.c:132:10: error: too few arguments to function ‘matrix_init’
  132 |     if (!matrix_init(result, a->cols
      |          ^~~~~~~~~~~
./samples/SAFE/__tmp_a48200ba.c:22:5: note: declared here
   22 | int matrix_init(struct Matrix *m, int rows, int cols) {
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_a48200ba.c:132:5: error: expected declaration or statement at end of input
  132 |     if (!matrix_init(result, a->cols
      |     ^~
